# tick_trader

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  engine.cfg  engine.cfg.bak  engine.cfg.example  engine_bench  engine_latency_check  engine_prof  main.cpp  notes.md
.github/: FUNDING.yml
CoreFrameworks/: ControllerConfig.hpp  OrderGates.hpp  Portfolio.hpp  PortfolioController.hpp  controller.cfg
DOCS/: ARCHITECTURE.md  CHANGELOG.md  COMPONENTS.md  CONFIGURATION.md  CONTRIBUTING.md  FUTURE_AUTOTUNE.md  FUTURE_VOLATILE_STRATEGY.md  LATENCY_PROFILING.md  NEXT_STEPS.md  PERFORMANCE.md  QUICKSTART.md
DOCS/changelogs/: 2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23-b.md  2026-03-23.md  2026-03-24-b.md  2026-03-24-c.md  2026-03-24-d.md  2026-03-24.md  2026-03-28.md
DataStream/: BinanceCrypto.hpp  BinanceCrytpo.hpp  BinanceOrderAPI.hpp  EngineTUI.hpp  FauxFIX.hpp  MetricsLog.hpp  MockGenerator.hpp  TUIAnsi.hpp  TUILayout.hpp  TUINotcurses.hpp  TUIWidgets.hpp  TradeLog.hpp
FixedPoint/: FixedPoint64.hpp  FixedPointN.hpp
ML_Headers/: GateControlNetwork.hpp  LinearRegression3X.hpp  LinearRegressionSimple.hpp  ROR_regressor.hpp  RollingStats.hpp
MemHeaders/: BuddyAllocator.hpp  PoolAllocator.hpp
Strategies/: MeanReversion.hpp  Momentum.hpp  RegimeDetector.hpp  StrategyInterface.hpp
claude-skills/: adding-strategies.md  architecture-overview.md  coding-standards.md  model-integration.md
tests/: binance_test.cpp  controller_test.cpp  integration_test.cpp
